--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#team">Team</a></li>
+                    <li><a href="staff.html">People</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="hamburger" id="hamburger">
@@ -34,7 +34,7 @@
         <section id="about" class="about">
             <div class="main-photo-text">
                 A niche legal practice<br>
-                specialising in local government, native title, planning law development<br>
+                specialising in local government, native title, planning law <br>
                 and commercial law, based in West Perth.
             </div>
             <div class="main-photo slideshow-container">
@@ -55,19 +55,12 @@
                 </div>
             </div>
             <div class="content-box">
-                <h2>Specialist lawyers</h2>
+                <h2>About Us</h2>
                 <p>
                 We act for private and public sector clients, including local governments, resource companies, native title parties, land developers and individuals.
                 <br>We prefer to develop long-term relationships with valued clients, built on respect and trust. We like to work closely with our clients and understand their goals and business.<br>
                 Our fee structure is highly competitive for our specialist services. We are happy to talk about flexible fee structures to suit clients’ needs, including fixed fees in some area of our practice.<br> Our work for our clients and in the community is driven by our values including trust, respect, community service, and constructiveness. See our values statement <a href="Under-construction.html">here</a>. <br>We pride ourselves on providing advice in plain English and with a commercial focus.</p>
-                <h3 class="expertise-title">Our Expertise</h3>
-                <ul class="expertise">
-                    <li>Native title and Aboriginal heritage</li>
-                    <li>Planning and environmental law</li>
-                    <li>Local government law</li>
-                    <li>Contracts and commercial law</li>
-                </ul>
-                <p>We work closely with networks of other law firms, particularly through our membership of the <a href="Under-construction.html">CGL Law Hub</a>. Our clients value our contribution to their businesses. See what clients say about us, and other rankings, <a href="Under-construction.html">here</a>.</p>
+                <p>We work closely with networks of other law firms, particularly through our membership of the <a href="Under-construction.html">CGL Law Hub</a> See what clients say about us, and other rankings, <a href="Under-construction.html">here</a>.</p>
             </div>
         </section>
 
@@ -78,49 +71,35 @@
                 <div class="service-box">
                     <div class="service">
                         <img src="images/waterhole.jpg" alt="Native title and Aboriginal heritage">
-                        <h3>Native title and Aboriginal heritage</h3>
-                        <p>We act for mining and energy companies, government entities and Aboriginal groups, in commercial aspects of native title and Aboriginal heritage law.</p>
-                        <a href="Service-Native-Title-Aboriginal-Heritage.html" class="more-info">More Info</a>
+                        <div class="service-info">
+                            <h3>Native title and Aboriginal heritage</h3>
+                            <p>We act for mining and energy companies, government entities and Aboriginal groups, in commercial aspects of native title and Aboriginal heritage law.</p>
+                            <a href="Service-Native-Title-Aboriginal-Heritage.html" class="more-info">More Info</a>
+                        </div>
                     </div>
                     <div class="service">
                         <img src="images/perth-city.jpg" alt="Planning and environmental law">
-                        <h3>Planning and environmental law</h3>
-                        <p>We act for local governments, resource companies, property developers and affected residents and businesses.</p>
-                        <a href="Service-Planning-Environmental-Law.html" class="more-info">More Info</a>
+                        <div class="service-info">
+                            <h3>Planning and environmental law</h3>
+                            <p>We act for local governments, resource companies, property developers and affected residents and businesses.</p>
+                            <a href="Service-Planning-Environmental-Law.html" class="more-info">More Info</a>
+                        </div>
                     </div>
                     <div class="service">
                         <img src="images/people.jpg" alt="Local government law">
-                        <h3>Local government law</h3>
-                        <p>We act for local governments and regional councils across Western Australia. We also advise individuals and businesses affected by local government decisions.</p>
-                        <a href="Service-Local-Government-Law.html" class="more-info">More Info</a>
+                        <div class="service-info">
+                            <h3>Local government law</h3>
+                            <p>We act for local governments and regional councils across Western Australia. We also advise individuals and businesses affected by local government decisions.</p>
+                            <a href="Service-Local-Government-Law.html" class="more-info">More Info</a>
+                        </div>
                     </div>
                     <div class="service">
                         <img src="images/sign.jpg" alt="Contracts and commercial law">
-                        <h3>Contracts and commercial law</h3>
-                        <p>We negotiate and draft contracts for private clients and governments, including ICT contracts, goods and services contracts, consultancy agreements and land development agreements.</p>
-                        <a href="Service-Contracts-Commercial-Law.html" class="more-info">More Info</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Team Section -->
-        <section id="team" class="team">
-            <div class="container">
-                <h2 class="section-title">Our Team</h2>
-                <div class="team-box">
-                    <div class="team-member">
-                        <img src="https://via.placeholder.com/150" class="circle-img" alt="Mark Gregory">
-                        <h3>Mark Gregory, Principal Lawyer</h3>
-                        <p>BA/LLB</p>
-                        <p>Mark is the founder and principal lawyer of M Gregory Legal, with over 30 years’ experience in public sector law, native title, planning and commercial law.</p>
-                        <a href="Mark-more-info.html" class="more-info">More Info</a>
-                    </div>
-                    <div class="team-member">
-                        <img src="https://via.placeholder.com/150" class="circle-img" alt="Emma Gregory">
-                        <h3>Emma Gregory, Office Manager</h3>
-                        <p>[Qualifications - TBC]</p>
-                        <p>Emma keeps the office running smoothly and pays the bills. When she is not working at M Gregory Legal she practices as a physiotherapist and Pilates therapist in private practice.</p>
+                        <div class="service-info">
+                            <h3>Contracts and commercial law</h3>
+                            <p>We negotiate and draft contracts for private clients and governments, including ICT contracts, goods and services contracts, consultancy agreements and land development agreements.</p>
+                            <a href="Service-Contracts-Commercial-Law.html" class="more-info">More Info</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -132,9 +111,7 @@
                 <h2 class="section-title">Contact Us</h2>
                 <p>Phone: <span id="phone"></span></p>
                 <p>Email: <span id="email"></span></p>
-                <p>Connect: <a href="Under-construction.html">LinkedIn</a></p>
                 <p>Address: Unit C4/118 Railway Street, West Perth WA 6005</p>
-                <div id="map"></div>
             </div>
         </section>
     </main>
@@ -161,9 +138,14 @@
         document.querySelectorAll('header nav ul li a').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
                 e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
+                const targetId = this.getAttribute('href');
+                if (targetId.startsWith('#')) {
+                    document.querySelector(targetId).scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                } else {
+                    window.location.href = targetId;
+                }
             });
         });
 
@@ -222,19 +204,6 @@
         document.getElementById('phone').textContent = '(08) 9226 0375';
         document.getElementById('email').innerHTML = '<a href="mailto:contact@mgregorylegal.com.au">contact@mgregorylegal.com.au</a>';
 
-        // Google Maps API
-        function initMap() {
-            var location = { lat: -31.9505, lng: 115.8605 }; // Coordinates for Perth, WA
-            var map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 14,
-                center: location
-            });
-            var marker = new google.maps.Marker({
-                position: location,
-                map: map
-            });
-        }
-
         // Slideshow logic with smooth fade transition
         let slideIndex = 0;
         showSlides();
@@ -259,7 +228,5 @@
             setTimeout(showSlides, 4000); // Change image every 4 seconds
         }
     </script>
-
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhS0p3uqye0umeR3EE-QV-bH2C4uokrwM&callback=initMap"></script>
 </body>
 </html>
