--- a/Service-Local-Government-Law.html
+++ b/Service-Local-Government-Law.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="index.html#top">Home</a></li>
                     <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#team">Team</a></li>
+                    <li><a href="staff.html">People</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -24,41 +24,44 @@
     </header>
 
     <main>
-        <!-- Banner Image -->
-        <section class="banner">
-            <img src="images/peopleL.jpg" alt="Banner">
-        </section>
+        <div class="main-container">
+            <!-- Sidebar Navigation -->
+            <nav class="sidebar">
+                <h2>Services</h2>
+                <ul>
+                    <li><a href="Service-Native-Title-Aboriginal-Heritage.html">Native Title</a></li>
+                    <li><a href="Service-Planning-Environmental-Law.html">Planning &amp; Environmental</a></li>
+                    <li><a href="Service-Local-Government-Law.html">Local Government</a></li>
+                    <li><a href="Service-Contracts-Commercial-Law.html">Contracts &amp; Commercial</a></li>
+                </ul>
+            </nav>
 
-        <!-- Service Navigation -->
-        <nav class="service-nav">
-            <h2>Services</h2>
-            <ul>
-                <li><a href="Service-Native-Title-Aboriginal-Heritage.html">Native Title</a></li>
-                <li><a href="Service-Planning-Environmental-Law.html">Planning &amp; Environmental</a></li>
-                <li><a href="Service-Local-Government-Law.html">Local Government</a></li>
-                <li><a href="Service-Contracts-Commercial-Law.html">Contracts &amp; Commercial</a></li>
-            </ul>
-        </nav>
+            <!-- Content Area -->
+            <div class="content-area">
+                <!-- Banner Image -->
+                <section class="banner">
+                    <img src="images/peopleL.jpg" alt="Banner">
+                </section>
 
-        <!-- Service Description -->
-        <section class="service-description">
-            <div class="container">
-                <h1>Local Government Law</h1>
-                <p>We act for local governments and regional councils across Western Australia. We also advise individuals and businesses affected by local government decisions.</p>
+                <!-- Service Description -->
+                <section class="service-description">
+                    <div class="container">
+                        <h1>Local Government Law</h1>
+                        <p>We act for local governments and regional councils across Western Australia. We also advise individuals and businesses affected by local government decisions.</p>
+                    </div>
+                </section>
+
+                <!-- Contact Section -->
+                <section id="contact" class="contact">
+                    <div class="content">
+                        <h2 class="section-title">Contact Us</h2>
+                        <p>Phone: <span id="phone">(08) 9226 0375</span></p>
+                        <p>Email: <span id="email"><a href="mailto:contact@mgregorylegal.com.au">contact@mgregorylegal.com.au</a></span></p>
+                        <p>Address: Unit C4/118 Railway Street, West Perth WA 6005</p>
+                    </div>
+                </section>
             </div>
-        </section>
-
-        <!-- Contact Section -->
-        <section id="contact" class="contact">
-            <div class="content">
-                <h2 class="section-title">Contact Us</h2>
-                <p>Phone: <span id="phone"></span></p>
-                <p>Email: <span id="email"></span></p>
-                <p>Connect: <a href="#">LinkedIn</a></p>
-                <p>Address: Unit C4/118 Railway Street, West Perth WA 6005</p>
-                <div id="map"></div>
-            </div>
-        </section>
+        </div>
     </main>
 
     <footer>
@@ -68,36 +71,21 @@
     </footer>
 
     <script>
-document.querySelectorAll('header nav ul li a, .service-nav ul li a').forEach(anchor => {
-    anchor.addEventListener('click', function(e) {
-        const href = this.getAttribute('href');
-        if (href.startsWith('#')) {
-            e.preventDefault();
-            document.querySelector(href).scrollIntoView({
-                behavior: 'smooth'
+        document.querySelectorAll('header nav ul li a, .sidebar ul li a').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                const href = this.getAttribute('href');
+                if (href.startsWith('#')) {
+                    e.preventDefault();
+                    document.querySelector(href).scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                }
             });
-        }
-    });
-});
-
+        });
 
         // Anti-scraping measures for contact info
         document.getElementById('phone').textContent = '(08) 9226 0375';
         document.getElementById('email').innerHTML = '<a href="mailto:contact@mgregorylegal.com.au">contact@mgregorylegal.com.au</a>';
-
-        // Google Maps API
-        function initMap() {
-            var location = { lat: -31.9505, lng: 115.8605 }; // Coordinates for Perth, WA
-            var map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 14,
-                center: location
-            });
-            var marker = new google.maps.Marker({
-                position: location,
-                map: map
-            });
-        }
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhS0p3uqye0umeR3EE-QV-bH2C4uokrwM&callback=initMap"></script>
 </body>
 </html>
