--- a/index.html
+++ b/index.html
@@ -123,110 +123,91 @@
     </footer>
 
     <script>
-        // JavaScript for smooth header transition on scroll
-        window.onscroll = function() {scrollFunction()};
+    // JavaScript for smooth header transition on scroll
+    window.onscroll = function() {scrollFunction()};
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
-                document.getElementById("header").classList.add("scroll");
-            } else {
-                document.getElementById("header").classList.remove("scroll");
-            }
+    function scrollFunction() {
+        if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
+            document.getElementById("header").classList.add("scroll");
+        } else {
+            document.getElementById("header").classList.remove("scroll");
         }
+    }
 
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('header nav ul li a').forEach(anchor => {
-            anchor.addEventListener('click', function(e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                if (targetId.startsWith('#')) {
-                    document.querySelector(targetId).scrollIntoView({
-                        behavior: 'smooth'
-                    });
-                } else {
-                    window.location.href = targetId;
-                }
-            });
-        });
-
-        // Smooth scrolling for logo link
-        document.querySelector('header .logo a').addEventListener('click', function(e) {
+    // Smooth scrolling for navigation links
+    document.querySelectorAll('header nav ul li a').forEach(anchor => {
+        anchor.addEventListener('click', function(e) {
             e.preventDefault();
-            document.querySelector(this.getAttribute('href')).scrollIntoView({
-                behavior: 'smooth'
-            });
+            const targetId = this.getAttribute('href');
+            if (targetId.startsWith('#')) {
+                document.querySelector(targetId).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            } else {
+                window.location.href = targetId;
+            }
         });
+    });
 
-        // Toggle hamburger menu
-        document.querySelector('.hamburger').addEventListener('click', function() {
-            document.querySelector('.nav-links').classList.toggle('nav-active');
-            document.querySelector('.hamburger').classList.toggle('toggle');
-            document.querySelector('.close-btn').classList.toggle('visible');
+    // Smooth scrolling for logo link
+    document.querySelector('header .logo a').addEventListener('click', function(e) {
+        e.preventDefault();
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+            behavior: 'smooth'
         });
+    });
 
-        // Close hamburger menu
-        document.querySelector('#close-btn').addEventListener('click', function() {
+    // Toggle hamburger menu
+    document.querySelector('.hamburger').addEventListener('click', function() {
+        document.querySelector('.nav-links').classList.toggle('nav-active');
+        document.querySelector('.hamburger').classList.toggle('toggle');
+        document.querySelector('.close-btn').classList.toggle('visible');
+    });
+
+    // Close hamburger menu
+    document.querySelector('#close-btn').addEventListener('click', function() {
+        document.querySelector('.nav-links').classList.remove('nav-active');
+        document.querySelector('.hamburger').classList.remove('toggle');
+        document.querySelector('.close-btn').classList.remove('visible');
+    });
+
+    // Close hamburger menu on link click
+    document.querySelectorAll('.nav-links a').forEach(link => {
+        link.addEventListener('click', function() {
             document.querySelector('.nav-links').classList.remove('nav-active');
             document.querySelector('.hamburger').classList.remove('toggle');
             document.querySelector('.close-btn').classList.remove('visible');
         });
+    });
 
-        // Close hamburger menu on link click
-        document.querySelectorAll('.nav-links a').forEach(link => {
-            link.addEventListener('click', function() {
-                document.querySelector('.nav-links').classList.remove('nav-active');
-                document.querySelector('.hamburger').classList.remove('toggle');
-                document.querySelector('.close-btn').classList.remove('visible');
-            });
-        });
+    // Anti-scraping measures for contact info
+    document.getElementById('phone').textContent = '(08) 9226 0375';
+    document.getElementById('email').innerHTML = '<a href="mailto:contact@mgregorylegal.com.au">contact@mgregorylegal.com.au</a>';
 
-        // Fade-in effect for h2 elements on scroll
-        const sections = document.querySelectorAll('section');
-        const options = {
-            threshold: 0.5
-        };
+    // Slideshow logic with smooth fade transition
+    let slideIndex = 0;
+    const slides = document.getElementsByClassName("mySlides");
 
-        const observer = new IntersectionObserver((entries, observer) => {
-            entries.forEach(entry => {
-                if (!entry.isIntersecting) {
-                    return;
-                }
-                entry.target.querySelector('h2').classList.add('fade-in');
-                observer.unobserve(entry.target);
-            });
-        }, options);
-
-        sections.forEach(section => {
-            observer.observe(section);
-        });
-
-        // Anti-scraping measures for contact info
-        document.getElementById('phone').textContent = '(08) 9226 0375';
-        document.getElementById('email').innerHTML = '<a href="mailto:contact@mgregorylegal.com.au">contact@mgregorylegal.com.au</a>';
-
-        // Slideshow logic with smooth fade transition
-        let slideIndex = 0;
-        showSlides();
-
-        function showSlides() {
-            let slides = document.getElementsByClassName("mySlides");
-            for (let i = 0; i < slides.length; i++) {
-                slides[i].classList.remove("active");
-                slides[i].classList.remove("fade-out");
-            }
-            slideIndex++;
-            if (slideIndex > slides.length) { 
-                slideIndex = 1 
-            }
-            slides[slideIndex - 1].classList.add("active");
-            slides[slideIndex - 1].classList.add("fade-in");
-            if (slideIndex === 1) {
-                slides[slides.length - 1].classList.add("fade-out");
-            } else {
-                slides[slideIndex - 2].classList.add("fade-out");
-            }
-            setTimeout(showSlides, 4000); // Change image every 4 seconds
+    function showSlides() {
+        for (let i = 0; i < slides.length; i++) {
+            slides[i].classList.remove("active");
+            slides[i].classList.remove("fade-out");
         }
-    </script>
+        slideIndex++;
+        if (slideIndex > slides.length) {
+            slideIndex = 1;
+        }
+        slides[slideIndex - 1].classList.add("active");
+        slides[slideIndex - 1].classList.add("fade-in");
+        setTimeout(() => {
+            slides[slideIndex - 1].classList.remove("fade-in");
+            slides[slideIndex - 1].classList.add("fade-out");
+            showSlides();
+        }, 4000); // Change image every 4 seconds
+    }
+
+    showSlides();
+</script>
+
 </body>
 </html>
