--- a/Under-construction.html
+++ b/Under-construction.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Under Construction</title>
-    <link rel="stylesheet" href="Under-construction.css">
+    <link rel="stylesheet" href="under-construction.css">
 </head>
 <body>
     <div class="container">
